--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
+<style type="text/css">
+	.content-item {
+		margin-bottom: 20px !important;
+		margin-left: 10px;
+	}
+</style>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar">
 	<div id="main-wrapper">
@@ -35,7 +41,6 @@
 				<div class="status-mes"></div>
 			</div>
 		</div>
-
 		<div class="columns-block container">
 			<div class="left-col-block blocks">
 				<header class="header theiaStickySidebar">
@@ -52,14 +57,9 @@
 								frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
 								process-centric expertise.
 							</p>
-
 							<p>Energistically fabricate customized imperatives through cooperative catalysts for change.</p>
-
-
 							<p><img src="img/Signature.png" alt="" class="img-responsive"/></p>
 						</div>
-
-
 						<ul class="social-icon">
 							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -68,11 +68,8 @@
 							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
-
 				</header>
-				<!-- .header-->
 			</div>
-			<!-- .left-col-block -->
 			<div class="right-col-block blocks">
 				<div class="theiaStickySidebar">
 					<section class="expertise-wrapper section-wrapper gray-bg">
@@ -80,16 +77,14 @@
 							<div class="row">
 								<div class="col-md-12">
 									<div class="section-title">
-										<h2>Expertise</h2>
+										<h2>EXPERTISE</h2>
 									</div>
 								</div>
 							</div>
-							<!-- .row -->
 							<div class="row">
 								<div class="col-md-6">
 									<div class="expertise-item">
 										<h3>Professionally drive</h3>
-
 										<p>
 											Synergistically strategize customer directed resources rather than principle.
 										</p>
@@ -98,7 +93,6 @@
 								<div class="col-md-6">
 									<div class="expertise-item">
 										<h3>Seamlessly leverage </h3>
-
 										<p>
 											Quickly repurpose reliable customer service with orthogonal ideas. Competently.
 										</p>
@@ -109,13 +103,11 @@
 								<div class="col-md-6">
 									<div class="expertise-item">
 										<h3>Interactively incubate</h3>
-
 										<p>
 											Interactively myocardinate high standards in initiatives rather than next-generation.
 										</p>
 									</div>
 								</div>
-
 								<div class="col-md-6">
 									<div class="expertise-item">
 										<h3>Globally streamline</h3>
@@ -124,54 +116,37 @@
 										Dynamically initiate client-based convergence vis-a-vis performance based. </p>
 									</div>
 								</div>
-
 							</div>
-
-
 						</div>
 					</section>
-					<!-- .expertise-wrapper -->
-
 					<section class="section-wrapper skills-wrapper">
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col-md-12">
 									<div class="section-title">
-										<h2>Skills</h2>
+										<h2>SKILLS</h2>
 									</div>
 								</div>
-
 							</div>
 							<div class="row">
 								<div class="col-md-12">
 									<div class="progress-wrapper">
-
 										<div class="progress-item">
 											<span class="progress-title">Marketing</span>
-
 											<div class="progress">
 												<div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
 												aria-valuemax="100" style="width: 62%"><span class="progress-percent"> 62%</span>
 											</div>
 										</div>
-										<!-- .progress -->
 									</div>
-									<!-- .skill-progress -->
-
-
 									<div class="progress-item">
 										<span class="progress-title">Market Research</span>
-
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 											aria-valuemax="100" style="width: 90%"><span class="progress-percent"> 90%</span>
 										</div>
 									</div>
-									<!-- /.progress -->
 								</div>
-								<!-- /.skill-progress -->
-
-
 								<div class="progress-item">
 									<span class="progress-title">Organisational Skills</span>
 
@@ -180,10 +155,7 @@
 										aria-valuemax="100" style="width: 75%;"><span class="progress-percent"> 75%</span>
 									</div>
 								</div>
-								<!-- /.progress -->
 							</div>
-							<!-- /.skill-progress -->
-
 							<div class="progress-item">
 								<span class="progress-title">Communtcation Skills</span>
 
@@ -192,9 +164,7 @@
 									aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
 								</div>
 							</div>
-							<!-- /.progress -->
 						</div>
-						<!-- /.skill-progress -->
 						<div class="progress-item">
 							<span class="progress-title">Project Management</span>
 
@@ -203,155 +173,201 @@
 								aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
 							</div>
 						</div>
-						<!-- .progress -->
 					</div>
-					<!-- .skill-progress -->
-
 				</div>
-				<!-- /.progress-wrapper -->
 			</div>
 		</div>
-		<!--.row -->
 	</div>
-	<!-- .container-fluid -->
 </section>
-<!-- .skills-wrapper -->
-
 <section class="section-wrapper section-experience gray-bg">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="section-title"><h2>Work Experience</h2></div>
+				<div class="section-title"><h2>WORK EXPERIENCE</h2></div>
 			</div>
 		</div>
-		<!--.row-->
 		<div class="row">
 			<div class="col-md-12">
 				<div class="content-item">
-					<small>2015 - Present</small>
-					<h3>Head of market research</h3>
-					<h4>Computer & Motor Ltd.</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2018 - Present</small>
+					<h3>Manager Operasional</h3>
+					<h4>PT.Tunas Dirgantara Haromain</h4>
+					<p>Tangerang</p>
 				</div>
-				<!-- .experience-item -->
 				<div class="content-item">
-					<small>2012 - 2015</small>
-					<h3>Media Analyst</h3>
-					<h4>BizzNiss</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2015 - 2017</small>
+					<h3>Crew</h3>
+					<h4>PT.Sumber Alfaria Trijaya,Tbk</h4>
+					<p>Bekasi</p>
 				</div>
-				<!-- .experience-item -->
 				<div class="content-item">
-					<small>2010 - 2012</small>
-					<h3>Budget Administrator</h3>
-					<h4>Somsom LLC</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2014</small>
+					<h3>Apprentice</h3>
+					<h4>Ramayana</h4>
+					<p>Depok</p>
 				</div>
-				<!-- .experience-item -->
+				<div class="content-item">
+					<small>2013</small>
+					<h3>Apprentice of Governance Department</h3>
+					<h4>Walikota Depok</h4>
+					<p>Depok</p>
+				</div>
 			</div>
 		</div>
-		<!--.row-->
 	</div>
-	<!-- .container-fluid -->
-
 </section>
-<!-- .section-experience -->
-
 <section class="section-wrapper section-education">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="section-title"><h2>Education</h2></div>
+				<div class="section-title"><h2>EDUCATION</h2></div>
 			</div>
 		</div>
-		<!--.row-->
 		<div class="row">
 			<div class="col-md-12">
 				<div class="content-item">
-					<small>2010 - 2012</small>
-					<h3>MA Product Design</h3>
-					<h4>University of California</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2015 - 2018</small>
+					<h3>Bina Sarana Informatika</h3>
+					<h4>Management Informatika</h4>
 				</div>
-				<!-- .experience-item -->
 				<div class="content-item">
-					<small>2007 - 2010</small>
-					<h3>Business marketing course</h3>
-					<h4>Royal Academy of Business</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2012 - 2015</small>
+					<h3>SMK Taman Ilmu Depok</h3>
+					<h4>Office Administration</h4>
 				</div>
-				<!-- .experience-item -->
 				<div class="content-item">
-					<small>2002 - 2006</small>
-					<h3>BA (Hons) Design</h3>
-					<h4>University of Michigan</h4>
-
-					<p>United Kingdom, London</p>
+					<small>2009 - 2012</small>
+					<h3>MTS Darul Funun El-Abbasiyyah Payakumbuh</h3>
 				</div>
-				<!-- .experience-item -->
+				<div class="content-item">
+					<small>2003 - 2009</small>
+					<h3>SD Negri Tanjung Haro Payakumbuh</h3>
+				</div>
 			</div>
 		</div>
-		<!--.row-->
+		<br>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="section-title"><h2>NON FORMAL EDUCATION</h2></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="content-item">
+					<small>August – September 2015</small>
+					<h3>The Onthel English Language Institute</h3>
+					<h4>Hello America Program for Intermediate Level Kec.Pare, Kediri Jawa Timur</h4>
+				</div>
+				<div class="content-item">
+					<small>January 11th 2015</small>
+					<h3>Seminar Kebangsaan</h3>
+					<h4>Meneguhkan kembali semangat Nasionalisme Pelajar Kota Depok sebagai kader internasional untuk Kota Depok yang lebih baik</h4>
+				</div>
+				<div class="content-item">
+					<small>2014</small>
+					<h3>Basic Level Of Competency</h3>
+					<h4>Program Keahlian</h4>
+				</div>
+			</div>
+		</div>
 	</div>
-	<!-- .container-fluid -->
-
 </section>
-<!-- .section-education -->
-
 <section class="section-wrapper section-interest gray-bg">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2>Interest</h2>
+					<h2>ORGANIZATIONAL EXPERIENCES</h2>
 				</div>
 			</div>
 		</div>
-		<!-- .row -->
-
 		<div class="row">
 			<div class="col-md-12">
 				<div class="content-item">
-					<h3>Books</h3>
-
+					<small>2012-2014</small>
+					<h3>OSIS SMK Taman Ilmu</h3>
+					<h4>Member</h4>
+				</div>
+				<div class="content-item">
+					<small>2013</small>
+					<h3>Pramuka</h3>
+					<h4>Member</h4>
+				</div>
+				<div class="content-item">
+					<small>2009-2011</small>
+					<h3>OSIS MTS Darul Funun El-Abbasiyyah</h3>
+					<h4>Member</h4>
+				</div>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="section-title">
+					<h2>LANGUAGE SKILL</h2>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="content-item">
+					<h3>Indonesian</h3>
 					<p>Proactively extend market-driven e-tailers rather than enterprise-wide supply chains.
 						Collaboratively embrace 24/7 processes rather than adaptive users. Seamlessly monetize
 					alternative e-business.</p>
 				</div>
 				<div class="content-item">
-					<h3>Sports</h3>
-
+					<h3>English</h3>
 					<p>Assertively grow optimal methodologies after viral technologies. Appropriately develop
 						frictionless technology for adaptive functionalities. Competently iterate functionalized
 					networks for best-of-breed services.</p>
-
 				</div>
 				<div class="content-item">
-					<h3>Art</h3>
-
+					<h3>Malay</h3>
+					<p>Dramatically utilize superior infomediaries whereas functional core competencies.
+						Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
+					pursue sustainable leadership via.</p>
+				</div>
+				<div class="content-item">
+					<h3>Minangkabau (West Sumatera)</h3>
 					<p>Dramatically utilize superior infomediaries whereas functional core competencies.
 						Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
 					pursue sustainable leadership via.</p>
 				</div>
 			</div>
 		</div>
-		<!-- .row -->
-
+		<br>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="section-title">
+					<h2>OTHERS INFORMATION</h2>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="content-item">
+					<h3>Hobby</h3>
+					<p>Traveling, Sports.</p>
+				</div>
+				<div class="content-item">
+					<h3>Strong Points</h3>
+					<p>Friendly, Hardworker, Discipline, Love to Learn Something New.</p>
+				</div>
+				<div class="content-item">
+					<h3>Skills</h3>
+					<p>Typing Master Pro (Good), Able to Oprate Microsoft Office Word and Microsoft Office Excel.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
-<!-- .section-publications -->
-
 <section class="section-wrapper portfolio-section">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2>Portfolio</h2>
+					<h2>PORTFOLIO</h2>
 				</div>
 			</div>
 		</div>
@@ -361,104 +377,75 @@
 					<div class="portfolio-thumb">
 						<img src="img/portfolio-1.jpg" alt="">
 					</div>
-
 					<div class="portfolio-info">
 						<h3>Creative concepts</h3>
 						<small>domain.com</small>
 					</div>
-					<!-- portfolio-info -->
 				</a>
-				<!-- .portfolio-item -->
 			</div>
 			<div class="col-md-6">
 				<a class="portfolio-item" href="#">
 					<div class="portfolio-thumb">
 						<img src="img/portfolio-2.jpg" alt="">
 					</div>
-
 					<div class="portfolio-info">
 						<h3>Customer focused</h3>
 						<small>domain.com</small>
 					</div>
-					<!-- portfolio-info -->
 				</a>
-				<!-- .portfolio-item -->
 			</div>
 			<div class="col-md-6">
 				<a class="portfolio-item" href="#">
 					<div class="portfolio-thumb">
 						<img src="img/portfolio-3.jpg" alt="">
 					</div>
-
 					<div class="portfolio-info">
 						<h3>Management methodology</h3>
 						<small>domain.com</small>
 					</div>
-					<!-- portfolio-info -->
 				</a>
-				<!-- .portfolio-item -->
 			</div>
 			<div class="col-md-6">
 				<a class="portfolio-item" href="#">
 					<div class="portfolio-thumb">
 						<img src="img/portfolio-4.jpg" alt="">
 					</div>
-
 					<div class="portfolio-info">
 						<h3>Market research</h3>
 						<small>domain.com</small>
 					</div>
-					<!-- portfolio-info -->
 				</a>
-				<!-- .portfolio-item -->
 			</div>
-
 		</div>
-		<!-- /.row -->
 	</div>
 </section>
-<!-- .portfolio -->
-
 <section class="section-contact section-wrapper gray-bg">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="section-title">
-					<h2>Contact</h2>
+					<h2>CONTACT</h2>
 				</div>
 			</div>
 		</div>
-		<!--.row-->
 		<div class="row">
 			<div class="col-md-12">
 				<address>
 					<strong>Address</strong><br>
-					1355 Market Street, Suite 900<br>
-					San Francisco, CA 94103
-
+					Perumahan Bumi Sawangan Indah 2 Jl.Anggrek 9 Blok A7 No.14 RT.04 RW.011 Kel.Pengasinan Kec.Sawangan Depok
 				</address>
 				<address>
-					<strong>Phone Number</strong><br>
-					+61 3 8376 6284
+					<strong>Phone</strong><br>
+					0821 2965 1804
 				</address>
-
-				<address>
-					<strong>Mobile Number</strong><br>
-					987 654 321
-				</address>
-
-
 				<address>
 					<strong>Email</strong><br>
-					<a href="mailto:#">coffee@amelie.me</a>
+					<a href="mailto:putri02mei@gmail.com">putri02mei@gmail.com</a>
 				</address>
 			</div>
 		</div>
 	</div>
-	<!--.container-fluid-->
 </section>
-<!--.section-contact-->
-
 <footer class="footer">
 	<div class="copyright-section">
 		<div class="container-fluid">
@@ -468,21 +455,13 @@
 						href="https://themehippo.com">themehippo</a></div>
 					</div>
 				</div>
-				<!--.row-->
 			</div>
-			<!-- .container-fluid -->
 		</div>
-		<!-- .copyright-section -->
 	</footer>
-	<!-- .footer -->
 </div>
-<!-- Sticky -->
 </div>
-<!-- .right-col-block -->
 </div>
-<!-- .columns-block -->
 </div>
-<!-- #main-wrapper -->
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/theia-sticky-sidebar.js"></script>
