--- a/index.html
+++ b/index.html
@@ -51,21 +51,16 @@
 						<h1>Aisyah Putri Faisal</h1>
 						<span class="lead">Marketing Consultant</span>
 						<div class="about-text">
-							<p>
-								Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
-								integrate efficient portals rather than customized customer service. Assertively deliver
-								frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
-								process-centric expertise.
-							</p>
-							<p>Energistically fabricate customized imperatives through cooperative catalysts for change.</p>
+							<p>Hallo saya aisyah putri yg baik hati dan tidak sombong. Rajin menabung lagi murah senyum</p>
+							<!-- <p>Energistically fabricate customized imperatives through cooperative catalysts for change.</p> -->
 							<p><img src="img/Signature.png" alt="" class="img-responsive"/></p>
 						</div>
 						<ul class="social-icon">
-							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.instagram.com/putrioraisyah" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="#" target="_blank"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</header>
